--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,3 +2,14 @@ site_name: Sami Benomar Megri
 nav:
   - Principal: index.md
   - Acerca de: about.md
+  - Practica5-1: Practica5-1.md
+  - Practica5-2: Practica5-2.md
+  - Practica5-4: Practica5-4.md
+theme: 
+  name: material
+  palette:
+    primary: 'blue'
+    accent: 'indigo'
+  font:
+    text: 'Roboto'
+    code: 'Roboto Mono'  
